@@ -19,6 +19,10 @@ cdef extern from "libxml/parser.h":
                                           char* prefix,
                                           char* URI)
 
+    ctypedef void (*cdataBlockSAXFunc)(void* ctx,
+                                       char* value,
+                                       int len)
+
 cdef extern from "libxml/tree.h":
     ctypedef struct xmlParserInput
     ctypedef struct xmlParserInputBuffer:
@@ -29,6 +33,7 @@ cdef extern from "libxml/tree.h":
     ctypedef struct xmlSAXHandler:
         startElementNsSAX2Func startElementNs
         endElementNsSAX2Func   endElementNs
+        cdataBlockSAXFunc      cdataBlock
 
 cdef extern from "libxml/xmlIO.h":
     cdef xmlParserInputBuffer* xmlAllocParserInputBuffer(int enc)
