@@ -12,6 +12,8 @@ Features added
 Bugs fixed
 ----------
 
+* HTML script/style content was not propagated to .text
+
 * Show text xincluded between text nodes correctly in .text and .tail
 
 * 'integer * objectify.StringElement' operation was not supported
